# bookstore

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  claude.yml
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
src/bookstore/: config.py  database.py  db_models.py  dependencies.py  exceptions.py  main.py
src/bookstore/models/: author.py  book.py  order.py  pagination.py
src/bookstore/repositories/: author.py  base.py  book.py  order.py
src/bookstore/routes/: authors.py  books.py  error_handlers.py  orders.py
src/bookstore/services/: author.py  book.py  order.py
tests/: conftest.py
tests/integration/: test_authors_api.py  test_books_api.py  test_orders_api.py  test_repositories.py
tests/unit/: test_config.py  test_database.py  test_dependencies.py  test_exceptions.py  test_frontend_assets.py  test_models.py  test_services_author.py  test_services_book.py  test_services_order.py
