[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore REST API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.21,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "email-validator>=2.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "httpx>=0.28,<1",
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookstore"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = ["UP046"]

[tool.ruff.lint.isort]
known-first-party = ["bookstore"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: integration tests (require database)",
]

[tool.coverage.run]
source = ["src/bookstore"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
